Fixed hyperlink color on 404 when dark mode is on

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,11 +89,11 @@ img, #page {
     color: #ff2c2c;
   }
 
-  .subsection, .cert-link, .contact, .redirect {
+  .subsection, .cert-link, .contact, .redirect, #archive {
     color: #996fd6;
   }
 
-  .subsection:active, .cert-link:active, .contact:active, .redirect:active {
+  .subsection:active, .cert-link:active, .contact:active, .redirect:active, #archive:active {
     color: #ff2c2c;
   }
 }
